[tool.poetry]
name = "blackbricks"
version = "2.3.0"
description = "Black for Databricks notebooks"
authors = ["Bendik Samseth <bendik.samseth@inspera.no>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/inspera/blackbricks"
keywords = [
    "automation",
    "formatter",
    "black",
    "sql",
    "yapf",
    "autopep8",
    "pyfmt",
    "gofmt",
    "rustfmt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.scripts]
blackbricks = "blackbricks.cli:app"

[tool.poetry.dependencies]
python = "^3.8.1"
black = "^24.4.2"
sqlparse = "^0.5.1"
databricks-cli = "^0.18.0"
typer = { extras = ["all"], version = ">=0.12.3" }

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
commitizen = "^3.28.0"
mypy = "^1.11.1"


[tool.commitizen]
name = "cz_conventional_commits"
version = "2.1.3"
tag_format = "$version"
version_files = ["blackbricks/__init__.py:version", "pyproject.toml:version"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
mypy_path = "type_stubs"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
